fix: handle overflow

--- a/packages/manager/apps/hub/src/index.scss
+++ b/packages/manager/apps/hub/src/index.scss
@@ -1,10 +1,16 @@
-@import '~bootstrap4/scss/_functions';
-@import '~bootstrap4/scss/_variables';
-@import '~bootstrap4/scss/_mixins';
-@import '~bootstrap4/scss/_utilities.scss';
-@import '~bootstrap4/scss/_grid.scss';
+@import '~bootstrap/scss/_functions';
+@import '~bootstrap/scss/_variables';
+@import '~bootstrap/scss/_mixins';
+@import '~bootstrap/scss/_utilities.scss';
+@import '~bootstrap/scss/_grid.scss';
 @import '@ovh-ux/manager-hub/src/variables.scss';
 @import './assets/theme/index.scss';
+
+.hub-main-view {
+  > * {
+    max-width: $hub-view-max-width;
+  }
+}
 
 .oui-field__label {
   color: $hub-text-color;
